// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiPage direction can be row 1`] = `
<div
  class="euiPage emotion-euiPage-row-grow-euiPageRestrictWidthStyles"
/>
`;

exports[`EuiPage grow can be false 1`] = `
<div
  class="euiPage emotion-euiPage-row-euiPageRestrictWidthStyles"
/>
`;

exports[`EuiPage is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiPage testClass1 testClass2 emotion-euiPage-row-grow-euiPageRestrictWidthStyles"
  data-test-subj="test subject string"
/>
`;

exports[`EuiPage paddingSize l is rendered 1`] = `
<div
  class="euiPage emotion-euiPage-row-grow-l-euiPageRestrictWidthStyles"
/>
`;

exports[`EuiPage paddingSize m is rendered 1`] = `
<div
  class="euiPage emotion-euiPage-row-grow-m-euiPageRestrictWidthStyles"
/>
`;

exports[`EuiPage paddingSize none is rendered 1`] = `
<div
  class="euiPage emotion-euiPage-row-grow-euiPageRestrictWidthStyles"
/>
`;

exports[`EuiPage paddingSize s is rendered 1`] = `
<div
  class="euiPage emotion-euiPage-row-grow-s-euiPageRestrictWidthStyles"
/>
`;

exports[`EuiPage paddingSize xl is rendered 1`] = `
<div
  class="euiPage emotion-euiPage-row-grow-xl-euiPageRestrictWidthStyles"
/>
`;

exports[`EuiPage paddingSize xs is rendered 1`] = `
<div
  class="euiPage emotion-euiPage-row-grow-xs-euiPageRestrictWidthStyles"
/>
`;

exports[`EuiPage restrict width can be set to a custom number 1`] = `
<div
  class="euiPage emotion-euiPage-row-grow-euiPageRestrictWidthStyles"
/>
`;

exports[`EuiPage restrict width can be set to a custom value and does not override custom style 1`] = `
<div
  class="euiPage emotion-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="color:red"
/>
`;

exports[`EuiPage restrict width can be set to a default 1`] = `
<div
  class="euiPage emotion-euiPage-row-grow-euiPageRestrictWidthStyles"
/>
`;
